# KasumiDiscord

./: .gitignore  Cargo.toml
migrations/: 20230316145659_messages.sql
src/: bot.rs  channel_typing.rs  database.rs  envs.rs  gpt.rs  main.rs  prompts.rs  summarizer.rs  translate.rs
src/translate/: deepl.rs  google.rs
templates/: chat.txt  chat_user.txt  summary_user.txt
